fixed text-align header

--- a/styles/home.css
+++ b/styles/home.css
@@ -119,6 +119,7 @@ ul {
     width: 100%;
     z-index: 1;
     margin-top: -5px;
+    text-align: center;
 }
 
 ul a {
